--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,11 @@
     <string name="location">Location</string>
     <string name="email">Email</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="order_by">Order by</string>
+    <string name="oder_by">Oder by</string>
+    <string name="type">Type</string>
+    <string name="price">Price</string>
+
 </resources>
