--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="oder_by">Oder by</string>
     <string name="type">Type</string>
     <string name="price">Price</string>
+    <string name="name_and_surname">Name and surname</string>
 
 </resources>
