--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="type">Type</string>
     <string name="price">Price</string>
     <string name="name_and_surname">Name and surname</string>
+    <string name="paypal_email_com">paypal@email.com</string>
 
 </resources>
